# tenjinreader

./: .gitmodules  README.md  Tasks.org  cabal-ghcjs.project  cabal.project  default.nix  deploy.hs  deploy.md
android/: LICENSE  frontend-android.cabal
android/app/: Main.hs
android/src/: BulmaMinCss.hs  FrontendCommon.hs  Ghci.hs  KanjiBrowser.hs  LoginWidget.hs  ReadingPane.hs  ReviewState.hs  SpeechRecog.hs  SrsWidget.hs  TextReader.hs  TopWidget.hs
backend/: backend.cabal  houhou2-server.cabal  server.cabal
backend/app/: devel.hs  migrateMain.hs
backend/config/: keter.yml  models  routes  settings.yml  test-settings.yml
backend/kanjiDbReader/: kanjidbreader.cabal
backend/kanjiDbReader/src/KanjiDB/: DB.hs  Interface.hs  JMDict.hs  KanaTable.hs  Mecab.hs  Model.hs  Search.hs
backend/src/: Application.hs  Backend.hs  Foundation.hs  Import.hs  KanjiDB.hs  Mecab.hs  Migrate.hs  Model.hs  Settings.hs  SrsDB.hs
backend/src/Handler/: Home.hs  WebSocketHandler.hs
backend/src/Handler/WebSocketHandler/: KanjiBrowser.hs  SrsReview.hs  Utils.hs
backend/static/: privacy.html
backend/templates/: default-layout.hamlet  homepage.hamlet  profile.hamlet
common/: common.cabal
common/src/: Common.hs  DerivingInstances.hs  Message.hs  Radicals.hs  VocabCategory.hs
common/src/Common/: Route.hs  Types.hs
dep/reflex-platform/: github.json
dep/servant-reflex/: github.json
deploy/: deploy.hs  deploy.md  index.html.template
frontend/: frontend.cabal
frontend/src/: Frontend.hs  FrontendCommon.hs  ImportWidget.hs  KanjiBrowser.hs  Main.hs  ReadingPane.hs  ReviewState.hs  SpeechRecog.hs  SrsWidget.hs  TextReader.hs  TopWidget.hs  custom.css  readable_bootstrap.min.css
frontend/src/Frontend/: Analyze.hs  Common.hs  Head.hs  Home.hs  Modals.hs  Nav.hs  Reader.hs  Vocab.hs
frontend/src/Frontend/Modal/: Base.hs  Class.hs
static/: default.nix
static/css/: default.nix
v2/: default.nix
v2/.obelisk/impl/: github.json
v2/backend/: backend.cabal
v2/backend/src/: Backend.hs
v2/common/: common.cabal
v2/common/src/Common/: Api.hs  Route.hs  Types.hs
v2/config/common/: route
v2/dep/servant-snap/: github.json
v2/frontend/: frontend.cabal
v2/frontend/src/: Frontend.hs
v2/frontend/src/Frontend/: Analyze.hs  Common.hs  Head.hs  Home.hs  Modals.hs  Nav.hs  Reader.hs  SRS.hs
v2/static/css/: default.nix
v2/static/css/sass/: tenjin-reader.scss
