name:                kanjidbreader
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dfordivam/dbmodel#readme
author:              Divam Narula
maintainer:          dfordivam@gmail.com
copyright:           All rights reserved
category:            web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     KanjiDB.Model
                       , KanjiDB.DB
                       , KanjiDB.Interface
                       , KanjiDB.JMDict
                       , KanjiDB.KanaTable
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , StandaloneDeriving
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , TypeFamilies
                     , DeriveGeneric
                     , UndecidableInstances
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , beam-core
                     , beam-sqlite
                     , sqlite-simple
                     , lens
                     , time
                     , common
                     , containers
                     , text
                     , jmdict-xml-parser
                     , pretty-simple
                     , conduit
                     , xml-conduit
                     , resourcet
                     , mecab
